9주차 - 미션 : 진행 중 미션 목록(커서)